[gd_scene load_steps=3 format=3 uid="uid://dxtnygkfikcsm"]

[ext_resource type="Script" path="res://Scenes/enemy_left_right.gd" id="1_mutyx"]
[ext_resource type="Texture2D" uid="uid://bc02g62huq4ir" path="res://Assets/Enemies/tile_0002.png" id="2_7rug8"]

[node name="Enemy left right" type="Area2D"]
collision_layer = 16
collision_mask = 15
script = ExtResource("1_mutyx")

[node name="body" type="Sprite2D" parent="."]
light_mask = 16
texture = ExtResource("2_7rug8")

[node name="LaserShoot" type="Marker2D" parent="."]
position = Vector2(0, 26)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-9, -8, -9, 6, 0, 12, 9, 5, 9, -8)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="LeaveTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="LeaveTimer" to="." method="_on_leave_timer_timeout"]
